--- a/bibliography.bib
+++ b/bibliography.bib
@@ -515,3 +515,18 @@ month={9},
   year={2023},
   url={https://ethresear.ch/t/why-enshrine-proposer-builder-separation-a-viable-path-to-epbs/15710/20},
 }
+
+@article{pellegrino2020gini,
+  title={The Gini Coefficient: Its Origins},
+  author={Pellegrino, Simone and others},
+  year={2020}
+}
+
+@article{gastwirth1972estimation,
+  title={The estimation of the Lorenz curve and Gini index},
+  author={Gastwirth, Joseph L},
+  journal={The review of economics and statistics},
+  pages={306--316},
+  year={1972},
+  publisher={JSTOR}
+}
